Make Simulation stateful
Parsed data is now stored in attributes of mdx.ingest.Simulation and data paths are read from metadata by default
Data path is now stored as a default in simulation metadata
Documented mdx.ingest

Minor changes:
Add pre-commit hooks
Add requirements.txt for dev

--- a/examples/meta.yaml
+++ b/examples/meta.yaml
@@ -5,6 +5,8 @@ Metadata:
   sim_desc: "Preliminary run of 1 nanosecond at 300 K — test bed for refactoring and further processing code"
   # execution dates of chunks (yyyy-mm-ddhh:mmZ,yyyy-mm-ddhh:mmZ)
   exec_times: []
+  # path of folder containing simulation chunks
+  data_path: "/home/Work/ayush/sim_data/prelim"
 
   partition:
     # stepsize in real units
